styles.css
:root {
  --x-axis-ticks: 5;
}

body {
  font-family: "Montserrat", sans-serif;
}

h1,
p,
a {
  text-align: center;
}

br {
  content: "A" !important;
  display: block !important;
  margin-bottom: 7.5px !important;
}

div.button-div {
  display: flex;
  align-items: center;
  justify-content: center;
}

div.tooltip {
  position: absolute;
  text-align: center;
  width: 150px;
  height: 60px;
  padding: 2px;
  font: 10px;
  background: rgba(176, 196, 222, 0.75);
  border: 0px;
  border-radius: 8px;
  pointer-events: none;
}

div.jumbotron {
  margin-bottom: 30px;
}

h1.display-4 {
  font-size: 36px;
}

.tick text {
  font-size: 15px;
  font-family: "Montserrat", sans-serif;
}

.tick line {
  stroke: #999;
  opacity: 0.2;
}

#scatter-div,
#barplot-div {
  position: relative;
  display: flex;
  align-items: center;
  /* justify-content: center; */
  justify-content: space-around;
}

#scatter-y-axis-label {
  font-family: "Montserrat", sans-serif;
  font-size: 20px;
  font-weight: bolder;
}

#scatter-title {
  font-family: "Montserrat", sans-serif;
  font-size: 28px;
  font-weight: bolder;
}


#state-select-button-container,
#county-select-button-container {
  width: 215px;
  margin: 20px;
}

@media (max-width: 577px) {
  #scatter-title {
   font-size: 16px;
  }

  #scatter-y-axis-label {
    font-size: 16px;
  }
  
  :root {
    --x-axis-ticks: 5;
  }
}

